Fixes to icon block and image css on mobile view

--- a/app/components/cms_icon_block_component/cms_icon_block_component.scss
+++ b/app/components/cms_icon_block_component/cms_icon_block_component.scss
@@ -27,10 +27,15 @@
 
     @include govuk-media-query($until: desktop) {
       flex: auto;
+      flex-direction: column;
     }
   }
 
   &__text {
     margin-left: 10px;
+
+    @include govuk-media-query($until: desktop) {
+      margin-left: 0;
+    }
   }
 }
